--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -1181,10 +1181,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-01 17:22:22.741259: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-06-02 17:28:59.403368: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -1201,7 +1208,9 @@
     "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
     "\n",
     "# Second hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))"
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
+    "\n",
+    "print(number_input_features)"
    ]
   },
   {
@@ -1294,75 +1303,75 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "804/804 [==============================] - 2s 1ms/step - loss: 50699.6680 - accuracy: 0.4974\n",
+      "804/804 [==============================] - 2s 1ms/step - loss: 45141.8789 - accuracy: 0.5018\n",
       "Epoch 2/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 106514.2578 - accuracy: 0.4997\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 61667.4688 - accuracy: 0.4913\n",
       "Epoch 3/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 55708.0430 - accuracy: 0.5171\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 22691.4453 - accuracy: 0.5019\n",
       "Epoch 4/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 47389.9297 - accuracy: 0.5064\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 6310.3086 - accuracy: 0.4951\n",
       "Epoch 5/30\n",
-      "752/804 [===========================>..] - ETA: 0s - loss: 24806.3008 - accuracy: 0.4997\n",
+      "774/804 [===========================>..] - ETA: 0s - loss: 15090.3643 - accuracy: 0.4921\n",
       "Epoch 5: saving model to checkpoints/weights.05.hdf5\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 24285.8457 - accuracy: 0.4978\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 14990.1094 - accuracy: 0.4950\n",
       "Epoch 6/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 14108.8330 - accuracy: 0.4957\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 29429.7578 - accuracy: 0.5126\n",
       "Epoch 7/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 27023.6152 - accuracy: 0.5145\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 8687.0576 - accuracy: 0.5082\n",
       "Epoch 8/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 10797.2432 - accuracy: 0.5111\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 22695.2656 - accuracy: 0.5136\n",
       "Epoch 9/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 24940.3750 - accuracy: 0.5073\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 6179.3574 - accuracy: 0.5077\n",
       "Epoch 10/30\n",
-      "739/804 [==========================>...] - ETA: 0s - loss: 17194.6895 - accuracy: 0.5104\n",
+      "735/804 [==========================>...] - ETA: 0s - loss: 13897.8242 - accuracy: 0.5100\n",
       "Epoch 10: saving model to checkpoints/weights.10.hdf5\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 16754.3691 - accuracy: 0.5123\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 13118.1562 - accuracy: 0.5081\n",
       "Epoch 11/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 4918.3643 - accuracy: 0.5100\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 7933.0547 - accuracy: 0.5294\n",
       "Epoch 12/30\n",
-      "804/804 [==============================] - 1s 2ms/step - loss: 22066.8809 - accuracy: 0.5060\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 1424.5868 - accuracy: 0.5362\n",
       "Epoch 13/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 16554.2637 - accuracy: 0.5152\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 5386.6743 - accuracy: 0.5231\n",
       "Epoch 14/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 12691.5391 - accuracy: 0.4818\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 3085.5068 - accuracy: 0.5075\n",
       "Epoch 15/30\n",
-      "718/804 [=========================>....] - ETA: 0s - loss: 8580.2979 - accuracy: 0.5205\n",
+      "737/804 [==========================>...] - ETA: 0s - loss: 1902.2037 - accuracy: 0.5121\n",
       "Epoch 15: saving model to checkpoints/weights.15.hdf5\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 7722.2300 - accuracy: 0.5235\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 1804.3994 - accuracy: 0.5144\n",
       "Epoch 16/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 1581.0023 - accuracy: 0.5170\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 806.5599 - accuracy: 0.5137\n",
       "Epoch 17/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 1007.8132 - accuracy: 0.5171\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 27.4874 - accuracy: 0.5372\n",
       "Epoch 18/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 2444.1968 - accuracy: 0.4963\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 29.3194 - accuracy: 0.5286\n",
       "Epoch 19/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 2159.0627 - accuracy: 0.5174\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6946 - accuracy: 0.5335\n",
       "Epoch 20/30\n",
-      "697/804 [=========================>....] - ETA: 0s - loss: 1720.9041 - accuracy: 0.5278\n",
+      "718/804 [=========================>....] - ETA: 0s - loss: 0.6909 - accuracy: 0.5341\n",
       "Epoch 20: saving model to checkpoints/weights.20.hdf5\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 1492.2062 - accuracy: 0.5294\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
       "Epoch 21/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6573 - accuracy: 0.5744\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
       "Epoch 22/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6830 - accuracy: 0.5346\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
       "Epoch 23/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
       "Epoch 24/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
       "Epoch 25/30\n",
-      "697/804 [=========================>....] - ETA: 0s - loss: 0.6910 - accuracy: 0.5334\n",
+      "677/804 [========================>.....] - ETA: 0s - loss: 0.6906 - accuracy: 0.5357\n",
       "Epoch 25: saving model to checkpoints/weights.25.hdf5\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
       "Epoch 26/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
       "Epoch 27/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
       "Epoch 28/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
       "Epoch 29/30\n",
-      "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
       "Epoch 30/30\n",
-      "655/804 [=======================>......] - ETA: 0s - loss: 0.6909 - accuracy: 0.5339\n",
+      "671/804 [========================>.....] - ETA: 0s - loss: 0.6910 - accuracy: 0.5333\n",
       "Epoch 30: saving model to checkpoints/weights.30.hdf5\n",
       "804/804 [==============================] - 1s 1ms/step - loss: 0.6910 - accuracy: 0.5335\n"
      ]
@@ -1382,8 +1391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "268/268 - 0s - loss: 0.6936 - accuracy: 0.6721 - 361ms/epoch - 1ms/step\n",
-      "Loss: 0.6936413645744324, Accuracy: 0.6720699667930603\n"
+      "268/268 - 0s - loss: 1.0062 - accuracy: 0.5292 - 338ms/epoch - 1ms/step\n",
+      "Loss: 1.00620698928833, Accuracy: 0.5292128324508667\n"
      ]
     }
    ],
